--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// SpringDoc Swagger
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
 }
 
 tasks.named('test') {
