feat: 메시지 국제화(i18n) 설정 #32 #15

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -26,7 +26,7 @@ spring:
     init:
       mode: never
       schema-locations: classpath:sql/schema.sql
-      #data-locations: classpath:sql/data.sql
+      data-locations: classpath:sql/data.sql
 
 logging:
   level:
