--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ server:
 spring:
   profiles:
     active: local
+  messages:
+    basename: i18n/messages,validation/messages
+    encoding: UTF-8
 
 springdoc:
   packages-to-scan: com.nice.petudio
