--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 	implementation group: "io.jsonwebtoken", name: "jjwt-api", version: "0.11.5"
 	implementation group: "io.jsonwebtoken", name: "jjwt-impl", version: "0.11.5"
 	implementation group: "io.jsonwebtoken", name: "jjwt-jackson", version: "0.11.5"
+
+	// AWS
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
