feat: 이미지URI 생성을 위한 s3 파일 기본 경로 추가 #34

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ cloud:
       secretKey: ${AWS_SECRET_KEY_DEV}
     s3:
       bucket: ${AWS_S3_BUCKET_NAME}
+      path: ${AWS_S3_FILE_DEFAULT_PATH}
     region:
       static: ${AWS_REGION_DEV}
     stack:
